fixed overflow issues

--- a/styles/LeftPanelStyle.css
+++ b/styles/LeftPanelStyle.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   width: 25vw;
-  flex-wrap: wrap;
   font-family: "Roboto";
 }
 
@@ -64,6 +63,8 @@ h2 {
 
 .group-members {
   margin-left: 1rem;
+  overflow: scroll;
+  height: 80vh;
 }
 
 .selected-group {
@@ -74,7 +75,7 @@ h2 {
 
 .member {
   padding-left: 0.5rem;
-  height: 20%;
+  height: 10%;
   display: flex !important;
   align-items: center !important;
   cursor: pointer;
