--- a/styles/noteboxstyle.css
+++ b/styles/noteboxstyle.css
@@ -4,22 +4,22 @@
   height: 70vh;
 }
 
-input {
+textarea {
   width: 72vw;
   height: 25vh;
-  margin: 0.5rem 1rem;
+  margin: 0.5rem;
   border-radius: 5px;
   border: none;
 }
 
 .notes-chat {
-  height: 62vh;
+  height: 66vh;
   background-color: antiquewhite;
   overflow-x: scroll;
 }
 
 .notes-title-bar {
-  height: 3rem;
+  height: 6vh;
   background-color: lightgrey;
   display: flex;
   align-items: center;
@@ -28,7 +28,7 @@ input {
 .send-msg {
   height: 28vh;
   width: 75vw;
-  background-color: rgb(158, 156, 156);
+  background-color: lightgray;
   border-bottom-left-radius: 5px;
 }
 
@@ -58,7 +58,7 @@ input {
   border: none;
   background-color: white;
   position: absolute;
-  bottom: 3rem;
+  bottom: 2rem;
   right: 2rem;
 }
 
